--- a/index.html
+++ b/index.html
@@ -57,26 +57,38 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="https://github.com/mystic0608/Airbnb-Asheville/blob/main/Airbnb_queries.sql" class="image"><img src="images/airbnb_logo.webp" alt="" /></a>
+									<a href="https://github.com/mystic0608/Airbnb-Asheville/tree/main" class="image"><img src="images/airbnb_logo.webp" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Project - Airbnb Asheville, NC</h2>
 										<p>In this project I downloaded a dataset from <a href="http://insideairbnb.com">insideairbnb.com</a>. With raw Airbnb data from Asheville, NC, I cleaned, transformed, and explored data in MS SQL Server. </p>
-										<a href="https://github.com/mystic0608/Airbnb-Asheville/blob/main/Airbnb_queries.sql" class="special">View Project</a>
+										<a href="https://github.com/mystic0608/Airbnb-Asheville/tree/main" class="special">View Project</a>
 									</div>
 								</div>
 							</section>
 
-						<!-- Two -->
+						<!-- Two-->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="https://github.com/mystic0608/Netflix---Movies-TV-Shows/blob/main/netflix_queries.sql" class="image"><img src="images/netflix_logo.jpg" alt="" /></a>
+									<a href="https://github.com/mystic0608/Netflix---Movies-TV-Shows/tree/main" class="image"><img src="images/netflix_logo.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Project - Netflix</h2>
 										<p>In this project I downloaded a publicly available dataset from Kaggle on Netflix data. In this analysis, I answer questions like what type of content the Netflix team should invest more in, and the top movies that have played big roles in user retention. </p>
-										<a href="https://github.com/mystic0608/Netflix---Movies-TV-Shows/blob/main/netflix_queries.sql" class="special">View Project</a>
+										<a href="https://github.com/mystic0608/Netflix---Movies-TV-Shows/tree/main" class="special">View Project</a>
 									</div>
 								</div>
 							</section>
+
+						<!-- Three-->
+						<section id="three" class="wrapper alt spotlight style2">
+							<div class="inner">
+								<a href="https://github.com/mystic0608/nyc_motor_vehicle_collisions/tree/main" class="image"><img src="images/NYC.PNG" alt="" /></a>
+								<div class="content">
+									<h2 class="major">Project - NYC Motor Vehicle Collisions</h2>
+									<p>In this data wrangling project with SQL, I performed EDA and identified key findings and recommendations to the state to reduce traffic collisions and increase driving awareness. </p>
+									<a href="https://github.com/mystic0608/nyc_motor_vehicle_collisions/tree/main" class="special">View Project</a>
+								</div>
+							</div>
+						</section>
 
 
 
